--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@lexical/history": "0.12.2",
     "@lexical/react": "0.12.2",
     "@peculiar/x509": "1.9.5",
+    "@wireapp/api-client": "file:.yalc/@wireapp/api-client",
     "@wireapp/avs": "9.5.2",
     "@wireapp/commons": "5.2.2",
-    "@wireapp/core": "42.19.2",
+    "@wireapp/core": "file:.yalc/@wireapp/core",
     "@wireapp/react-ui-kit": "9.9.12",
     "@wireapp/store-engine-dexie": "2.1.6",
     "@wireapp/store-engine-sqleet": "1.8.9",
